c/src/test/resources/c/mini_bnc/invalid/havocCast.c
typedef int data_t;
int main(){
	int len = (data_t)__NONDET__();
	ASSERT(len > 0);
	return len;
}
